// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`proxySpy deep returns spied values 1`] = `
Array [
  Array [
    "get",
    "mockName",
    "foo",
  ],
  Array [
    "call",
    "mockName.foo",
    Array [],
  ],
]
`;

exports[`proxySpy deep supports Symbols 1`] = `
Array [
  Array [
    "get",
    "mockName",
    Symbol(foo),
  ],
  Array [
    "get",
    "mockName.Symbol(foo)",
    Symbol(bar),
  ],
]
`;

exports[`proxySpy methods apply/call 1`] = `
Array [
  Array [
    "call",
    "mockName",
    Array [
      1,
      2,
      3,
    ],
  ],
]
`;

exports[`proxySpy methods apply/method 1`] = `
Array [
  Array [
    "apply",
    "mockName",
    Object {
      "method1": [Function],
    },
    Array [
      1,
      2,
      3,
    ],
  ],
]
`;

exports[`proxySpy methods get 1`] = `
Array [
  Array [
    "get",
    "mockName",
    "property1",
  ],
]
`;

exports[`proxySpy methods set 1`] = `
Array [
  Array [
    "set",
    "mockName",
    "property1",
    1,
  ],
]
`;

exports[`serializeWithSpies is ok with circular structures 1`] = `
Object {
  "obj1": [Circular],
  "obj2": [Circular],
}
`;

exports[`serializeWithSpies is ok with circular structures 2`] = `
Object {
  "obj1": Object {
    "obj1": [Circular],
  },
  "obj2": Object {
    "obj2": [Circular],
  },
}
`;

exports[`serializeWithSpies stringifies spies 1`] = `Object {}`;

exports[`serializeWithSpies stringifies spies 2`] = `
Array [
  Object {},
  Object {},
]
`;
